--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,16 @@ before_install:
 
 script:
   - docker run -e CI=true gbrbd/docker-react npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: 'eu-central-1'
+  app: 'docker-react'
+  bucket_name: 'elasticbeanstalk-eu-central-1-800962361902'
+  bucket_path: 'docker-react'
+  on:
+    branch: master
+  access_key_id:
+    secure: 'AWS_ACCES_KEY'
+  secret_access_key:
+    secure: 'AWS_SECRET_KEY'
