--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,6 @@ deploy:
   on:
     branch: master
   access_key_id:
-    secure: 'AWS_ACCES_KEY'
+    secure: '$AWS_ACCES_KEY'
   secret_access_key:
-    secure: 'AWS_SECRET_KEY'
+    secure: '$AWS_SECRET_KEY'
