--- a/.travis.yml
+++ b/.travis.yml
@@ -19,4 +19,4 @@ deploy:
     branch: master
   access_key_id: $AWS_ACCES_KEY
   secret_access_key:
-    secure: '$AWS_SECRET_KEY'
+    secure: "$AWS_SECRET_KEY"
