--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,10 @@ deploy:
   app: 'docker-react'
   bucket_name: 'elasticbeanstalk-eu-central-1-800962361902'
   bucket_path: 'docker-react'
+  env: 'DockerReact-env'
   on:
     branch: master
-  access_key_id: $AWS_ACCES_KEY
+  access_key_id:
+    secure: '$AWS_ACCES_KEY'
   secret_access_key:
-    secure: "$AWS_SECRET_KEY"
+    secure: '$AWS_SECRET_KEY'
